Add support for varargs parameters